--- a/code/ENVS-193DS_spring-2025_final.html
+++ b/code/ENVS-193DS_spring-2025_final.html
@@ -111,6 +111,9 @@ window.Quarto = {
    
   <ul>
   <li><a href="#problem-1.-research-writing-36-points" id="toc-problem-1.-research-writing-36-points" class="nav-link active" data-scroll-target="#problem-1.-research-writing-36-points">Problem 1. Research writing (36 points)</a></li>
+  <li><a href="#problem-2.-data-visualization-36-points" id="toc-problem-2.-data-visualization-36-points" class="nav-link" data-scroll-target="#problem-2.-data-visualization-36-points">Problem 2. Data visualization (36 points)</a></li>
+  <li><a href="#problem-3.-data-analysis-87-points" id="toc-problem-3.-data-analysis-87-points" class="nav-link" data-scroll-target="#problem-3.-data-analysis-87-points">Problem 3. Data analysis (87 points)</a></li>
+  <li><a href="#problem-4.-affective-and-exploratory-visualizations-45-points" id="toc-problem-4.-affective-and-exploratory-visualizations-45-points" class="nav-link" data-scroll-target="#problem-4.-affective-and-exploratory-visualizations-45-points">Problem 4. Affective and exploratory visualizations (45 points)</a></li>
   </ul>
 </nav>
 </div>
@@ -167,24 +170,12 @@ window.Quarto = {
 <p>Be specific and use variables and/or statistics from the example.</p>
 </section>
 <section id="c.-suggestions-for-rewriting-20-points" class="level4">
-<h4 class="anchored">c.&nbsp;Suggestions for rewriting (20 points)</h4>
+<h4 class="anchored" data-anchor-id="c.-suggestions-for-rewriting-20-points">c.&nbsp;Suggestions for rewriting (20 points)</h4>
 <p>In 1-3 sentences, <em>write new research statements</em> to include relevant components from parts a-b and a full test summary in parentheses to be transparent about the statistical method.</p>
 <p>Be sure that your rewritten statements clearly delineate the <em>biological narrative</em> from the <em>statistical summary</em>. See lecture and workshop for examples of writing.</p>
 <p>Note that your co-worker didn’t include any information about the test statistic, distribution, etc., and that you only know the p-value. For any part that you do not know, list that part with text. For example, you could write something like: “… <strong>r = correlation coefficient</strong>, p = 0.03, <strong><span class="math inline">\(\alpha\)</span> = significance level</strong> …”</p>
-<div class="callout callout-style-default callout-note callout-titled" title="Real work on nitrogen deposition in the San Joaquin River Delta">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-3-contents" aria-controls="callout-3" aria-expanded="false" aria-label="Toggle callout">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Real work on nitrogen deposition in the San Joaquin River Delta
-</div>
-<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
-</div>
-<div id="callout-3" class="callout-3-contents callout-collapse collapse">
-<div class="callout-body-container callout-body">
-<p>This problem is inspired by a publication outlining the very real consequences for river ecosystems from nitrogen and phosphorus addition to the San Joaquin and Sacramento rivers:</p>
-<p>Saleh, Dina and Joseph Domagalski. 2021. “Concentrations, Loads, and Associated Trends of Nutrients Entering the Sacramento–San Joaquin Delta, California.” <em>San Francisco Estuary and Watershed Science.</em> DOI: <a href="https://doi.org/10.15447/sfews.2021v19iss4art6">10.15447/sfews.2021v19iss4art6</a>.</p>
+</section>
+</section>
 <section id="problem-2.-data-visualization-36-points" class="level2">
 <h2 class="anchored" data-anchor-id="problem-2.-data-visualization-36-points">Problem 2. Data visualization (36 points)</h2>
 <section id="a.-cleaning-and-summarizing-16-points" class="level4">
@@ -437,11 +428,6 @@ mean in group N mean in group Y
 </div>
 <p><img src="shower_viz.jpg" class="img-fluid"></p>
 <p>This is a component you will complete in workshop during week 10. <strong>We will be taking attendance that day. If you attend class and complete the activity, you will receive full credit for this section.</strong></p>
-</section>
-</section>
-</div>
-</div>
-</div>
 </section>
 </section>
 
